--- a/package.json
+++ b/package.json
@@ -13,15 +13,27 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@react-pdf/renderer": "^3.1.9",
+    "@types/fabric": "^5.3.0",
+    "@types/html-to-pdfmake": "^2.4.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-resizable": "^3.0.4",
+    "chakra-ui-steps": "^2.1.0",
+    "fabric": "^5.3.0",
     "framer-motion": "^10.11.2",
     "jspdf": "^2.5.1",
     "next": "13.2.4",
+    "quill": "^1.3.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
+    "react-quill": "^2.0.0",
+    "react-resizable": "^3.0.5",
     "typescript": "5.0.3"
   }
 }
